implemented update user methods, edited docs
