# src/services/users/dto.ts
@@ -16,6 +16,23 @@ export class UserRegisterDTO {
     last_name: string;
 }
 
+export class UserUpdateDTO {
+    @IsEmail({}, { message: 'Wrong email' })
+    email: string;
+
+    @Length(6, 20, { message: 'Should have length from 6 to 20 cheracters' })
+    password: string;
+
+    @MinLength(2, { message: 'Firstname is too short' })
+    @IsString({ message: 'Should be string not number' })
+    first_name: string;
+
+    @MinLength(2, { message: 'Lastname is too short' })
+    @IsString({ message: 'Should be string not number' })
+    last_name: string;
+    image: string;
+}
+
 export class UserLoginDTO {
     @IsEmail({}, { message: 'Wrong email' })
     email: string;
